Add spain version

--- a/es/about/index.html
+++ b/es/about/index.html
@@ -2,19 +2,59 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Sobre Juan Lopez</title>
+	<title>Sobre mi</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-modal/2.2.6/css/bootstrap-modal.min.css">
-	<link rel="stylesheet" href="../../css/master.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/components/icon.min.css">
-	<link href="https://fonts.googleapis.com/css?family=Nixie+One" rel="stylesheet"> 
-	<link rel="stylesheet" href="../../css/animations.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="apple-touch-icon" sizes="57x57" href="../../img/favico/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="../../img/favico/apple-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="../../img/favico/apple-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="../../img/favico/apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="../../img/favico/apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="../../img/favico/apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="../../img/favico/apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="../../img/favico/apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="../../img/favico/apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="192x192"  href="../../img/favico/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="../../img/favico/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="../../img/favico/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="../../img/favico/favicon-16x16.png">
+	<link rel="manifest" href="../../img/favico/manifest.json">
+	<meta name="msapplication-TileColor" content="#ffffff">
+	<meta name="msapplication-TileImage" content="../../img/favico/ms-icon-144x144.png">
+	<meta name="theme-color" content="#ffffff">
 
 
 
 </head>
 <body class="fadeIn animated">
+	<div class="loader">
+		<div class="sk-circle">
+		  <div class="sk-circle1 sk-child"></div>
+		  <div class="sk-circle2 sk-child"></div>
+		  <div class="sk-circle3 sk-child"></div>
+		  <div class="sk-circle4 sk-child"></div>
+		  <div class="sk-circle5 sk-child"></div>
+		  <div class="sk-circle6 sk-child"></div>
+		  <div class="sk-circle7 sk-child"></div>
+		  <div class="sk-circle8 sk-child"></div>
+		  <div class="sk-circle9 sk-child"></div>
+		  <div class="sk-circle10 sk-child"></div>
+		  <div class="sk-circle11 sk-child"></div>
+		  <div class="sk-circle12 sk-child"></div>
+		  <br>
+		  <br>
+		  <br>
+		  <br>
+		  <br>
+		  <br>
+		  <br>
+		  <br>
+		  <br>
+		  <p class="text-center">Loading...</p>
+		</div>
+		</div>
 		<nav class="hide-on-med-and-down">
 		<div class="row">
 			<div class="col col-sm-3 col-xs-3 col text-center" id="menu">
@@ -24,11 +64,10 @@
 
 			<div class="col col-lg-5 text-right">
 				<ul class="main-ul">
-					<a href="../index.html"><li>Inicio</li></a>
 					<a href="../about/index.html"><li class="active">Sobre</li></a>
-					<a href="../works/index.html"><li>Trabajos</li></a>
+					<a href="../works/index.html"><li >Trabajos</li></a>
 					<a href="../skills/index.html"><li>Habilidades</li></a>
-					<a href="../contact/index.html"><li  >Contacto</li></a>
+					<a href="../contact/index.html"><li>Contacto</li></a>
 				</ul>
 			</div>
 			<div class="col col-lg-4 redes  text-center">
@@ -54,6 +93,7 @@
 					<a href="../skills/index.html"><li>Habilidades</li></a>
 					<a href="../contact/index.html"><li>Contacto</li></a>
 					<i class="close-btn icon close"></i>
+
 				</div>
 		</nav>
 		</div>
@@ -69,8 +109,7 @@
 							<h2>Juan Miguel Lopez</h2>
 							<h4>Desarrollador Frontend y Cofundador de Echonode</h4>
 							<p>
-							Mi nombre es Juan Miguel, soy desarrollador web especializado en el area del frontend. Soy de ciudad de Maracay del pais Venezuela. Tengo 19 años y estudio Ingenieria en Computacion en la Universidad Simon Bolivar.
-							Busco lo mejor para ti y entregarte el mejor trabajo posible!
+Mi nombre es Juan Miguel, soy desarrollador web especializado en el area del frontend. Soy de ciudad de Maracay del pais Venezuela. Tengo 19 años y estudio Ingenieria en Computacion en la Universidad Simon Bolivar. Busco lo mejor para ti y entregarte el mejor trabajo posible! 
 							</p>
 						</div>
 					</div>
@@ -78,19 +117,20 @@
 				<div class="col-lg-9">
 					<div class="work-description">
 					<div class="container-personal text-center">
-						<h1>Mi vida como desarrollador</h1>
+						<h1>My life as developer</h1>
 						<div class="divider"></div>
 						<div class="row">
 							<div class="col col-md-12 col-lg-6">
 								<p class="text-center">
-									He estado en el mundo del desarrollo web desde 2015 cuando empece a aprender lo basico de html y css mientras estudiaba mi carrera.
-									En este momento estoy asociado con un compañero en un proyecto llamado Echonode. Al mismo tiempo sigo en constante aprendizaje sobre las ultimas tecnologias en el entorno web , mi ultimo curso fue en FreeCodeCamp donde tengo el Certificado de Desarrollador Frontend.
-
+									He estado en el mundo del desarrollo web desde 2015 cuando empece a aprender lo basico de html y css mientras estudiaba mi carrera. En este momento estoy asociado con un compañero en un proyecto llamado Echonode. Al mismo tiempo sigo en constante aprendizaje sobre las ultimas tecnologias en el entorno web , mi ultimo curso fue en FreeCodeCamp donde tengo el Certificado de Desarrollador Frontend. 
 								</p>
 							</div>
 							<div class="col col-md-12 col-lg-6 text-left">
 								<p class="text-center">
-										Actualmente estudio ingenieria en computacion en la USB(Universidad Simon Bolivar) en Venezuela. En esta carrera he aprendido algunas bases muy importantes dentro de este mundo , tales como Logica, Algoritmos, Probabilidades, Matematicas, Calculos, Algebra, Bases de Datos entre otras. Debido a la crisis he tenido que migrar hacia Chile en busca de una mejor calidad de vida y tratar de terminar mi carrera fuera del pais.
+										
+
+Actualmente estudio ingenieria en computacion en la USB(Universidad Simon Bolivar) en Venezuela. En esta carrera he aprendido algunas bases muy importantes dentro de este mundo , tales como Logica, Algoritmos, Probabilidades, Matematicas, Calculos, Algebra, Bases de Datos entre otras. Debido a la crisis he tenido que migrar hacia Chile en busca de una mejor calidad de vida y tratar de terminar mi carrera fuera del pais.
+
 								</p>
 							</div>
 						</div>			
@@ -102,11 +142,17 @@
 			</div>
 		</div>
 	</main>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet" href="../../css/master.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/components/icon.min.css">
+	<link rel="stylesheet" href="../../css/animations.css">
 	<script
 			  src="https://code.jquery.com/jquery-3.2.1.min.js"
 			  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
 			  crossorigin="anonymous"></script>
-
+	 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+	<script src="../../js/bootstrap.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/blazy@1.8.2/blazy.min.js"></script>
 	<script src="../../js/script.js"></script>
 </body>
 </html>
