--- a/es/index.html
+++ b/es/index.html
@@ -3,27 +3,57 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Juan Lopez</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-	<link rel="stylesheet" href="../css/master.css">
-	<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/components/icon.min.css">
-	<link rel="stylesheet" href="../css/hover.css">
-	<link href="https://fonts.googleapis.com/css?family=Yesteryear" rel="stylesheet"> 
-	<link href="https://fonts.googleapis.com/css?family=Mr+Dafoe|Niconne|Parisienne|Pinyon+Script|Yesteryear" rel="stylesheet">
-	<link rel="stylesheet" href="../css/animations.css">
+	<link href="https://fonts.googleapis.com/css?family=Shrikhand|Suez+One|Yatra+One" rel="stylesheet"> 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-
-
+	<link rel="apple-touch-icon" sizes="57x57" href="../img/favico/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="../img/favico/apple-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="../img/favico/apple-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="../img/favico/apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="../img/favico/apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="../img/favico/apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="../img/favico/apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="../img/favico/apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="../img/favico/apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="192x192"  href="../img/favico/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="../img/favico/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="../img/favico/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="../img/favico/favicon-16x16.png">
+	<link rel="manifest" href="../img/favico/manifest.json">
+	<meta name="msapplication-TileColor" content="#ffffff">
+	<meta name="msapplication-TileImage" content="../img/favico/ms-icon-144x144.png">
+	<meta name="theme-color" content="#ffffff">
 
 </head>
-
-<body class="animated">
+<body class="animated banner-body">
+	<div class="loader">
+		<div class="sk-circle">
+  <div class="sk-circle1 sk-child"></div>
+  <div class="sk-circle2 sk-child"></div>
+  <div class="sk-circle3 sk-child"></div>
+  <div class="sk-circle4 sk-child"></div>
+  <div class="sk-circle5 sk-child"></div>
+  <div class="sk-circle6 sk-child"></div>
+  <div class="sk-circle7 sk-child"></div>
+  <div class="sk-circle8 sk-child"></div>
+  <div class="sk-circle9 sk-child"></div>
+  <div class="sk-circle10 sk-child"></div>
+  <div class="sk-circle11 sk-child"></div>
+  <div class="sk-circle12 sk-child"></div>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <p class="text-center">Loading...</p>
+</div>
+	</div>
 	<div class="main-banner">
-
 		<div class="container-fluid">
 		<div>
-
 			<ul>
 				<div class="row text-center">
 					<div class="col col-lg-2">
@@ -160,7 +190,8 @@
 					</a>
 
 					<!-- Svg Works -->							
-					<svg
+					<a href="works/index.html">
+								<svg
 					   xmlns:dc="http://purl.org/dc/elements/1.1/"
 					   xmlns:cc="http://creativecommons.org/ns#"
 					   xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
@@ -250,10 +281,11 @@
 					    </g>
 					  </g>
 					</svg>
+					</a>
 
 					<!-- SVG Skills -->
 									
-				<svg
+				<a href="skills/index.html"><svg
 				   xmlns:dc="http://purl.org/dc/elements/1.1/"
 				   xmlns:cc="http://creativecommons.org/ns#"
 				   xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
@@ -414,10 +446,12 @@
 				  </g>
 
 				</svg>
+				</a>
 
 				<!--- SVG Contact -->
 
-				<svg
+				<a href="contact/index.html">
+					<svg
 				   xmlns:dc="http://purl.org/dc/elements/1.1/"
 				   xmlns:cc="http://creativecommons.org/ns#"
 				   xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
@@ -523,15 +557,23 @@
 				    </g>
 				  </g>
 				</svg>
-			</div>
-			<div class="text-center hexagon-down">
+				</a>
+				<div class="text-center hexagon-down">
 				<span><a class="transition" href="about/index.html" id="aboutId1">Sobre mi</a></span>
-				<span><a href="works/index.html">Mis trabajos</a></span>
+				<span><a href="works/index.html">Mis Trabajos</a></span>
 				<span><a href="skills/index.html">Habilidades</a></span>
 				<span><a href="contact/index.html">Contacto</a></span>
 			</div>
+			</div>
+			
 		</div>
 	</div>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet" href="../css/master.css">
+	<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/components/icon.min.css">
+	<link rel="stylesheet" href="../css/hover.css">
+	<link rel="stylesheet" href="../css/animations.css">
 	<script
 			  src="https://code.jquery.com/jquery-3.2.1.min.js"
 			  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
