--- a/es/skills/index.html
+++ b/es/skills/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Contacto</title>
+	<title>Skills</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="apple-touch-icon" sizes="57x57" href="../../img/favico/apple-icon-57x57.png">
 	<link rel="apple-touch-icon" sizes="60x60" href="../../img/favico/apple-icon-60x60.png">
@@ -23,8 +23,9 @@
 	<meta name="theme-color" content="#ffffff">
 
 </head>
-<body class="fadeIn animated">
-	<div class="loader">
+<body class="animated fadeIn">
+
+		<div class="loader">
 		<div class="sk-circle">
   <div class="sk-circle1 sk-child"></div>
   <div class="sk-circle2 sk-child"></div>
@@ -60,9 +61,9 @@
 			<div class="col col-lg-5 text-right">
 				<ul class="main-ul">
 					<a href="../about/index.html"><li>Sobre</li></a>
-					<a href="../works/index.html"><li class="active">Trabajos</li></a>
-					<a href="../skills/index.html"><li>Habilidades</li></a>
-					<a href="../contact/index.html"><li class="active">Contacto</li></a>
+					<a href="../works/index.html"><li>Trabajos</li></a>
+					<a href="../skills/index.html"><li class="active">Habilidades</li></a>
+					<a href="../contact/index.html"><li>Contacto</li></a>
 				</ul>
 			</div>
 			<div class="col col-lg-4 redes  text-center">
@@ -85,77 +86,124 @@
 					<a href="../index.html"><li>Inicio</li></a>
 					<a href="../about/index.html"><li>Sobre mi</li></a>
 					<a href="../works/index.html"><li>Trabajos</li></a>
-					<a href="../skills/index.html"><li>Habilidades</li></a>
-					<a href="../contact/index.html"><li class="active">Contacto</li></a>
+					<a href="../skills/index.html"><li class="active">Habilidades</li></a>
+					<a href="../contact/index.html"><li>Contacto</li></a>
 					<i class="close-btn icon close"></i>
 
 				</div>
 		</nav>
 		</div>
 	</nav>
-	<main id="contact">
+
+	<main>
 		<div class="container">
-			<div class="row text-center">
-				<div class="col col-lg-6 col-sm-12 text-left">
-					<div class="contact-photo">
-						
+			<div class="intro text-center">
+				<h1>Mis habiidades</h1>
+				<div class="divider"></div>
+				<p>
+					Una lista con todas las tecnologias que estoy en capacidad de usar.
+				</p>
+			</div>
+			<div class="row">
+				<div class="flex-skill-letra">
+					<div class="col-lg-3">
+						<h3>HTML5</h3>
+					</div>
+					<div class="col-lg-3">
+						<h3>CSS3</h3>
+					</div>
+					<div class="col-lg-3">
+						<h3>Javascript</h3>
 					</div>
 				</div>
-				<div class="col col-lg-6 col-sm-12">
-					<h1 class="text-center">
-						Contactame!
-					</h1>
-					<div class="divider"></div>
-					<h2>
-						Email
-					</h2>
-					<span>
-						juanlop9717@gmail.com
-					</span>
-					<h2>
-					Telefono
-					</h2>
-					<span>+56 9 75241856</span>
-					<h2>Telegram</h2>
-					<span>@juanlop9717</span>
-					<h1 class="text-center">
-					Sigueme!</h1>
-					<div class="divider"></div>
-					<div class="row">
-						<div class="col-lg-3 col-lg-offset-2  col-sm-3">
-							<a href="https://www.linkedin.com/in/juan-lopez-4200a1143/" target="_blank"><div class="work-block2" id="linked">
-								<i class="linkedin icon big"></i>
-							</div></a>
-						</div>
-						<div class="col-lg-3 col-lg-offset-2   col-sm-3">
-							<a href="https://twitter.com/choncha5" target="_blank"><div class="work-block2 twitter" id="tuit">
-								<i class="twitter icon big"></i>
-							</div></a>
-						</div>
-						<div class="col-lg-3 col-lg-offset-2 col-m col-sm-3" >
-							<a href="https://www.instagram.com/chonchass/" target="_blank">
-								<div class="work-block2 instagram" id="insta">
-								<i class="instagram icon big"></i>
-							</div>
-							</a>
-						</div>
-						<div class="col-lg-3 col-lg-offset-2  col-sm-3">
-							<a href="https://github.com/juanlop9717" target="_blank"><div class="work-block2" id="git">
-								<i class="github icon big "></i>
-							</div></a>
-						</div>
+				<div class="flex-skill">
+					<div class="col-lg-3 col-s-12 col-sm-6 skill-box">
+						<img src="../../img/html.png" class="img-responsive img-skills" alt="" >
+					</div>
+					<div class="col-lg-3 col-s-12 col-sm-6 skill-box">
+						<img src="../../img/css3.png" class="img-responsive img-skills" alt="" >
+					</div>
+					<div class="col-lg-3 col-s-12 col-sm-6 skill-box">
+						<img src="../../img/javascript.png" class="img-responsive img-skills" alt="" >
+					</div>
+				</div>
+				<div class="flex-skill-letra">
+					<div class="col-lg-3">
+						<h3>Jquery</h3>
+					</div>
+					<div class="col-lg-3">
+						<h3>Materialize</h3>
+					</div>
+					<div class="col-lg-3">
+						<h3>Bootstrap</h3>
+					</div>
+				</div>
+				<div class="flex-skill">
+					<div class="col-lg-3 col-s-12 col-sm-6 skill-box">
+					<img src="../../img/jquery.png" class="img-responsive img-skills" alt="" >
+					</div>
+					<div class="col-lg-3 col-s-12 col-sm-6 skill-box">
+						<img src="../../img/materialize.png" class="img-responsive img-skills" alt="">
+					</div>
+					<div class="col-lg-3 col-s-12 col-sm-6 skill-box">
+						<img  src="../../img/boostrap.png" class="img-responsive img-skills">
+					</div>
+				</div>
+				<div class="flex-skill-letra">
+					<div class="col-lg-3">
+						<h3>Sass</h3>
+					</div>
+					<div class="col-lg-3">
+						<h3>Git</h3>
+					</div>
+					<div class="col-lg-3">
+						<h3>Gulp</h3>
+					</div>
+				</div>
+				<div class="flex-skill">
+					<div class="col-lg-3 col-s-12 col-sm-6 skill-box">
+					<img src="../../img/sass.svg" class="img-responsive img-skills" alt="">
+					</div>
+					<div class="col-lg-3 col-s-12 col-sm-6 skill-box">
+						<img class="img-responsive img-skills" src="../../img/git.png" alt="">
+					</div>
+					<div class="col-lg-3 col-s-12 col-sm-6 skill-box">
+						<img src="../../img/gulp.png" class="img-responsive img-skills" alt="">
+					</div>
+				</div>
+				<div class="flex-skill-letra">
+					<div class="col-lg-3">
+						<h3>Photoshop</h3>
+					</div>
+					<div class="col-lg-3">
+						<h3>Vue JS</h3>
+					</div>
+					<div class="col-lg-3">
+						<h3>NodeJS</h3>
+					</div>
+				</div>
+				<div class="flex-skill">
+					<div class="col-lg-3 col-s-12 col-sm-6 skill-box">
+					<img class="img-responsive img-skills" src="../../img/photoshop.png" alt="">
+					</div>
+					<div class="col-lg-3 col-s-12 col-sm-6 skill-box">
+						<img class="img-responsive img-skills" src="../../img/vue.png" alt="">
+					</div>
+					<div class="col-lg-3 col-s-12 col-sm-6 skill-box" >
+						<img src="../../img/nodejs.png" class="img-responsive img-skills" id="nodejs" alt="">
 					</div>
 				</div>
 			</div>
 		</div>
 	</main>
+	
 	<footer>
 		<p class="text-center">
 			Copyright Derechos reservados 2017
 		</p>
 		<div class="text-center">Icons made by <a href="https://www.flaticon.com/authors/madebyoliver" title="Madebyoliver">Madebyoliver</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
 	</footer>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" href="../../css/master.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/components/icon.min.css">
 	<link rel="stylesheet" href="../../css/animations.css">
@@ -166,18 +214,5 @@
 	 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
 	<script src="../../js/bootstrap.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/blazy@1.8.2/blazy.min.js"></script>
-	  <script>
-    	 $("#menu").click(function(){
-        $(".mobile-menu2").slideDown();
-    })
-
-    $(".close-btn").click(function(){
-        $(".mobile-menu2").hide(500);
-    });
-    $(window).on('load', function () {
-     $(".loader").fadeOut(200);
- });
-
-    </script> 
+	<script src="../../js/script.js"></script>
 </body>
-</html>
